[project]
name = "petrovich-bot"
version = "0.1.0"
description = "simple tg bot"
authors = [
    {name = "'Tony",email = "fedosov-toxa@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
